FIX sort-by alignment for authors

--- a/public/css/bz-splitter.css
+++ b/public/css/bz-splitter.css
@@ -130,7 +130,7 @@ span.infos {
     padding: 0 1%;
 }
 
-.tools span.filepath-sort-by {
+.tools span.filepath-sort-by, .tools span.author-sort-by {
     float: right;
 }
 .tools span.sort-by {
